# terraneo

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
apps/benchmarks/performance/: CMakeLists.txt  README.md  benchmark_alt.cpp  benchmark_alt_fe.cpp  benchmark_baseline.cpp  benchmark_communication.cpp  benchmark_operators.cpp
apps/benchmarks/physics/: CMakeLists.txt  benchmark_convection_shell_isovisc_ns_ns.cpp
src/terra/: CMakeLists.txt  grid.hpp  spherical_shell_mesh.cpp  spherical_shell_mesh.hpp  vtk.hpp
src/terra/communication/: CMakeLists.txt  buffer_copy_kernels.hpp  communication.cpp  communication.hpp
src/terra/communication/shell/: communication.cpp  communication.hpp  fv_communication.hpp
src/terra/dense/: CMakeLists.txt  mat.hpp  vec.hpp
src/terra/eigen/: eigen_wrapper.hpp
src/terra/fe/: strong_algebraic_dirichlet_enforcement.hpp  strong_algebraic_freeslip_enforcement.hpp
src/terra/fe/wedge/: integrands.hpp  kernel_helpers.hpp  quadrature.hpp
src/terra/fe/wedge/kernel_generation/: EpsDivDiv_kernel  EpsilonDivDiv_kernel_gen.py  Laplace_kernel  ast_extensions.py  integrands.py  kernel_helpers.py  terra_kernel_gen.ipynb  terra_kernel_gen.py
src/terra/fe/wedge/linearforms/shell/: CMakeLists.txt  inv_rho_drho_dt.hpp  inv_rho_grad_rho_dot_u.hpp  supg_rhs.hpp
src/terra/fe/wedge/operators/shell/: CMakeLists.txt  boundary_mass.hpp  div_k_grad.hpp  div_k_grad_simple.hpp  divergence.hpp  epsilon.hpp  epsilon_divdiv.hpp  epsilon_divdiv_kerngen copy.hpp  epsilon_divdiv_kerngen.hpp  epsilon_divdiv_kerngen_v01_initial.hpp  (+33 more)
src/terra/fe/wedge/quadrature/: quadrature.hpp
src/terra/fe/wedge/shell/: CMakeLists.txt  grid_transfer.hpp  grid_transfer_constant.hpp  grid_transfer_linear.hpp
src/terra/fv/hex/: conversion.hpp  helpers.hpp
src/terra/fv/hex/operators/: advection_diffusion.hpp  fct_advection_diffusion.hpp  geometry_helper.hpp
src/terra/geophysics/: CMakeLists.txt
src/terra/geophysics/viscosity/: CMakeLists.txt  viscosity_interpolation.hpp
src/terra/grid/: CMakeLists.txt  bit_masks.hpp  grid_types.hpp  spherical_shell.cpp  spherical_shell.hpp
src/terra/grid/shell/: bit_masks.hpp  spherical_shell.cpp  spherical_shell.hpp
src/terra/io/: CMakeLists.txt  xdmf.hpp
src/terra/kernels/common/: CMakeLists.txt  grid_operations.hpp  vector_operations.hpp
src/terra/kokkos/: CMakeLists.txt  kokkos_wrapper.hpp
src/terra/linalg/: CMakeLists.txt  diagonally_scaled_operator.hpp  linear_form.hpp  operator.hpp  vector.hpp  vector_q1.hpp  vector_q1isoq2_q1.hpp
src/terra/linalg/solvers/: CMakeLists.txt  block_preconditioner_2x2.hpp  chebyshev.hpp  diagonal_solver.hpp  fgmres.hpp  identity_solver.hpp  jacobi.hpp  multigrid.hpp  pbicgstab.hpp  pcg.hpp  pminres.hpp  richardson.hpp  solver.hpp
src/terra/linalg/solvers/gca/: CMakeLists.txt  galerkin_coarsening_linear.hpp  gca.hpp  gca_elements_collector.hpp  gca_matrix_storage.hpp  local_matrix_storage.hpp
src/terra/linalg/trafo/: CMakeLists.txt  local_basis_trafo_normal_tangential.hpp
src/terra/linalg/util/: debug_sparse_assembly.hpp
src/terra/mpi/: mpi.hpp
src/terra/shell/: CMakeLists.txt  radial_profiles.hpp  spherical_harmonics.cpp  spherical_harmonics.hpp
src/terra/util/: CMakeLists.txt  arg_parser.hpp  bit_masking.hpp  cli11_helper.hpp  filesystem.hpp  info.hpp  init.hpp  interpolation.hpp  logging.hpp  result.hpp  table.hpp  timer.hpp  timestamp.hpp  xml.hpp
src/terra/visualization/: vtk.hpp  xdmf.hpp
src/terra/vtk/: vtk.hpp
tests/: CMakeLists.txt  test_basis_trafo_normal_tangential.cpp  test_boundary_mass.cpp  test_debug_assembly.cpp  test_div_k_grad_cg.cpp  test_div_k_grad_multigrid_gca.cpp  test_epsilon_cg.cpp  test_epsilon_divdiv_cg.cpp  test_epsilon_divdiv_stokes.cpp  test_epsilon_divdiv_stokes_minres.cpp  test_fct_convergence.cpp  test_fct_diffusion.cpp  test_flag_field_unique_vertices.cpp  test_heat_eq.cpp  test_interpolate.cpp  test_kokkos_smoke.cpp  test_laplace.cpp  test_laplace_bicgstab.cpp  test_laplace_cg.cpp  test_laplace_cg_subdomains.cpp  test_laplace_compare.cpp  test_laplace_fgmres.cpp  test_laplace_jacobi.cpp  test_laplace_minres.cpp  test_laplace_multigrid.cpp  test_laplace_multigrid_chebyshev.cpp  test_laplace_multigrid_gca.cpp  test_laplace_multigrid_stored_lmatrices.cpp  test_laplace_pbicgstab_multigrid.cpp  test_laplace_richardson.cpp  test_mesh.cpp  test_mpi_2_proc.cpp  test_mpi_smoke.cpp  test_prolongation.cpp  test_prolongation_constant.cpp  test_prolongation_linear.cpp  test_radial_profiles.cpp  test_restriction.cpp  test_rotating_flow_freeslip.cpp  test_stokes_minres.cpp  (+9 more)
(+61 files in other folders)
