function(add_terra_test name)
    add_executable(${name} ${name}.cpp)
    if (MPI_FOUND)
        target_link_libraries(${name} terra MPI::MPI_CXX)
    else ()
        target_link_libraries(${name} terra)
    endif ()
    target_include_directories(${name} PRIVATE ${CMAKE_SOURCE_DIR}/src)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

add_terra_test(test_interpolate)
add_terra_test(test_mesh)
add_terra_test(test_laplace)
add_terra_test(test_kokkos_smoke)
add_terra_test(test_mpi_smoke)
